Sun Jun 19 13:44:32 GMT 2011  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Fix typo in comment and verbose output.

Sun Jun 19 12:23:43 GMT 2011  Olly Betts <olly@survex.com>

	* api/error.cc,generate-exceptions: Rearrange members of Xapian::Error
	  to reduce its size (from 48 to 40 bytes on x86-64 Linux).

Sun Jun 19 12:22:53 GMT 2011  Olly Betts <olly@survex.com>

	* common/pretty.h: Fix comment typo.

Sun Jun 19 04:45:26 GMT 2011  Olly Betts <olly@survex.com>

	* INSTALL: Update GCC details - we now recommend 4.3 or newer (was 4.1)
	  and note that while 3.1 is the hard minimum requirement, the oldest
	  we've tested with at all recently was 3.3.

Sat Jun 18 14:27:14 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,
	  queryparser/termgenerator_internal.cc: Fix warning from GCC 3.3.

Sat Jun 18 06:27:03 GMT 2011  Olly Betts <olly@survex.com>

	* api/,expand/ortermlist.cc,include/xapian/: Use TermIterator() instead
	  of TermIterator(NULL), and similarly for other Xapian iterator
	  classes.

Sat Jun 18 05:16:23 GMT 2011  Olly Betts <olly@survex.com>

	* tests/zlib-vg.so: Remove file committed accidentally.

Sat Jun 18 05:07:56 GMT 2011  Olly Betts <olly@survex.com>

	* api/,include/xapian/positioniterator.h,
	  include/xapian/termiterator.h: Reimplementations of PositionIterator
	  and TermIterator from the end-iterator-proxies branch.  Assignment
	  operators for these classes now return *this rather than void.

Sat Jun 18 01:49:02 GMT 2011  Olly Betts <olly@survex.com>

	* tests/perftest/Makefile.mk: Make sure that perftest isn't run with
	  libeatmydata preloaded.

Fri Jun 17 07:39:35 GMT 2011  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Tabs to spaces.

Fri Jun 17 07:38:06 GMT 2011  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Add flush() -> commit().

Thu Jun 16 14:40:35 GMT 2011  Olly Betts <olly@survex.com>

	* tests/: Add TEST( ) or TEST(! ) around existing reopen() calls to